--- a/Project_GuanZhi/Project_GuanZhi.csproj
+++ b/Project_GuanZhi/Project_GuanZhi.csproj
@@ -18,6 +18,7 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>Project_GuanZhi_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>C41249C510C3149919D3BE504B03A7CD1C985D07</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -126,6 +127,7 @@
     <Compile Include="Models\AppSettings.cs" />
     <Compile Include="Models\SideMenuModel.cs" />
     <Compile Include="Models\SideMenuType.cs" />
+    <Compile Include="Models\SystemFont.cs" />
     <Compile Include="Models\WebArticleModel.cs" />
     <Compile Include="Pages\ReadPage.xaml.cs">
       <DependentUpon>ReadPage.xaml</DependentUpon>
@@ -147,7 +149,6 @@
     <Content Include="Fonts\ZCOOLQingKeHuangYou-Regular.ttf" />
     <Content Include="Fonts\NotoSansSC-Regular.otf" />
     <Content Include="Fonts\guanzhi.ttf" />
-    <None Include="Project_GuanZhi_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -207,11 +208,22 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
     </PackageReference>
+    <PackageReference Include="SharpDX">
+      <Version>4.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDX.Direct2D1">
+      <Version>4.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDX.DXGI">
+      <Version>4.2.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Project_GuanZhi_TemporaryKey.pfx" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
