修改字体选项，将图标字体去除

--- a/Project_GuanZhi/Project_GuanZhi.csproj
+++ b/Project_GuanZhi/Project_GuanZhi.csproj
@@ -18,9 +18,9 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>Project_GuanZhi_StoreKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>AD9300C663F05D0945719202B6249D6FC5639A3C</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>856165F1319DE403BF575C7E93DEB94EB4391BE9</PackageCertificateThumbprint>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxPackageDir>E:\Package\GuanZhi\</AppxPackageDir>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
